Refatora estrutura de DTOs e modelos, adiciona novas classes para Active e Mark, e atualiza UserController e UserService para suportar UUIDs.